Fix the selected background color of code editor in dark mode

--- a/assets/css/easyadmin-theme/variables-theme.scss
+++ b/assets/css/easyadmin-theme/variables-theme.scss
@@ -321,6 +321,7 @@
     --code-editor-attribute-color: #22863a;
     --code-editor-addition-bg: #e6ffed;
     --code-editor-deletion-bg: #ffeef0;
+    --code-editor-selection-bg: #d7d7d7;
 
     --page-login-bg: var(--gray-100);
     --page-login-form-bg: var(--white);
@@ -614,6 +615,7 @@
     --code-editor-attribute-color: #7ee787;
     --code-editor-addition-bg: rgba(46, 160, 67, 0.3);
     --code-editor-deletion-bg: rgba(218, 54, 51, 0.3);
+    --code-editor-selection-bg: #203E6F;
 
     --page-login-bg: var(--true-gray-800);
     --page-login-form-bg: var(--true-gray-700);
